crates/plotnik-lib/tests/05-typegen/definitions/error_captured_ref_in_recursive_cycle.txt
A = {(expression_statement) (statement_block (B))?}
B = {(debugger_statement) (statement_block (A) @x)? @s}
==== diagnostics ====
error: the referenced definition doesn't match exactly one node, so there is no single node to bind
 --> query.ptk:2:44
  |
1 | A = {(expression_statement) (statement_block (B))?}
  |     ----------------------------------------------- defined here
2 | B = {(debugger_statement) (statement_block (A) @x)? @s}
  |                                            ^^^
  |
help: capture nodes inside the definition, or drop this capture
